[project]
name = "felupe"
version = "6.0.0"
description = "Finite Element Analysis"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICE7SE"}
keywords = [
  "python", 
  "constitution",
  "scientific-computing",
  "fem",
  "finite-elements-analysis",
  "hyperelasticity", 
]

authors = [
  {email = "a.dutzler@gmail.com"},
  {name = "Andreas Dutzler"}
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Utilities"
]

dependencies = [
  "numpy",
  "scipy",
]

[project.optional-dependencies]
all = [
    "meshio",
    "h5py",
    "numba",
    "sparse",
    "einsumt",
]

[project.urls]
homepage = "https://felupe.readthedocs.io/en/latest"
code = "https://github.com/adtzlr/felupe"
issues = "https://github.com/adtzlr/felupe/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
