[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[project]
name = "felupe"
authors = [
  {email = "a.dutzler@gmail.com"},
  {name = "Andreas Dutzler"}
]
description = "Finite Element Analysis"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
  "python", 
  "constitution",
  "scientific-computing",
  "fem",
  "finite-elements-analysis",
  "hyperelasticity", 
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Utilities"
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "numpy",
  "scipy",
]

[project.optional-dependencies]
all = [
    "meshio",
    "h5py",
    "numba",
    "sparse",
    "einsumt",
    "tensortrax",
]

[tool.setuptools.dynamic]
version = {attr = "felupe.__about__.__version__"}

[project.urls]
Homepage = "https://felupe.readthedocs.io/en/latest"
Code = "https://github.com/adtzlr/felupe"
Issues = "https://github.com/adtzlr/felupe/issues"