[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[project]
name = "felupe"
description = "Finite Element Analysis"
readme = "README.md"
authors = [
  {name = "Andreas Dutzler"},
  {email = "a.dutzler@gmail.com"},
  
]
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = [
  "computational-mechanics",
  "fea",
  "fem",
  "finite-elements",
  "finite-elements-analysis",
  "finite-elements-methods",
  "hyperelasticity",
  "partial-differential-equations",
  "pde",
  "python", 
  "scientific-computing",
  "solid-mechanics-codes",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Utilities"
]
dynamic = ["version"]

dependencies = [
  "numpy",
  "scipy",
  "tensortrax",
]

[project.optional-dependencies]
docs = [
    "pydata-sphinx-theme",
    "sphinx-autoapi",
    "sphinx-inline-tabs",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-gallery",
    "pypandoc",
]
examples = [
    "matadi",
    "contique",
    "pypardiso",
]
io = [
    "h5py",
    "meshio",
]
parallel = ["einsumt"]
progress = ["tqdm"]
plot = ["matplotlib"]
view = ["pyvista[jupyter]"]

test = ["felupe[io,plot]"]
all = ["felupe[io,parallel,plot,progress,view]"]

[tool.setuptools.dynamic]
version = {attr = "felupe.__about__.__version__"}

[project.urls]
Homepage = "https://felupe.readthedocs.io/en/latest"
Code = "https://github.com/adtzlr/felupe"
Issues = "https://github.com/adtzlr/felupe/issues"
