[metadata]
name = felupe
version = 1.0.1
author = Andreas Dutzler
author_email = a.dutzler@gmail.com
description = Finite Element Analysis
url = https://github.com/adtzlr/felupe
project_urls =
    Code=https://github.com/adtzlr/felupe
    Issues=https://github.com/adtzlr/felupe/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Utilities

[options]
packages = find:
install_requires =
    numpy
    scipy
	quadpy
    h5py
    meshio
python_requires = >=3.6

[options.extras_require]
all =
    numba
    sparse
